--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,6 +11,28 @@
 
 </head>
     <body>
-    <!--Add review form here -->
+        <form action="{% url 'djangoapp:add_review' dealer_id %}" method="post">
+            <div class="container"> <!--Style root div with .container class -->
+                {% csrf_token %}
+                <h1>Add Review</h1>
+                <hr>
+                <div class="form-group"> <!--Style second div with .form-group class -->
+                    <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+                    <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                    <select name="car" id="car" class="form-select" required>
+                        {% for car in cars %}
+                            <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+                        {% endfor %}
+                   </select>
+                   <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+                    <button class="btn btn-primary" type="submit">Submit</button> <!--Style button with .btn and .btn-primary class -->
+                </div>
+            </div>
+        </form>
     </body>
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
 </html>
