--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -16,17 +16,28 @@
                 {% csrf_token %}
                 <h1>Add Review</h1>
                 <hr>
-                <div class="form-group"> <!--Style second div with .form-group class -->
+                <div class="form-group">
+                    <label for="content">Enter the review content:</label>
                     <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+                </div>
+                <div class="form-group">
                     <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                    <label class="form-check-label" for="purchasecheck">Has purchased the car from this dealership? </label>
+                </div>
+                <div class="form-group">
+                    <label for="car">Select your car (model-make-year):</label>
                     <select name="car" id="car" class="form-select" required>
                         {% for car in cars %}
                             <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
                         {% endfor %}
-                   </select>
-                   <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
-                    <button class="btn btn-primary" type="submit">Submit</button> <!--Style button with .btn and .btn-primary class -->
+                    </select>
                 </div>
+                <div class="form-group">
+                    <label for="purchasedate">Select you purchase date:</label>
+                    <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+                </div>
+                <button class="btn btn-primary" type="submit">Submit</button> <!--Style button with .btn and .btn-primary class -->
+                
             </div>
         </form>
     </body>
